// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. block 1`] = `
<View>
  Some text is here 
  <View>
    and there is some 
    <View>
      more text 
      <Text>
        and in here
      </Text>
    </View>
     after it too
  </View>
   and here
</View>
`;

exports[`1. subscript with fallback 1`] = `
<Text
  style={
    Object {
      "fontSize": 10,
    }
  }
>
  without unicode support
</Text>
`;

exports[`2. bold 1`] = `
<Text
  style={
    Object {
      "fontWeight": "bold",
    }
  }
>
  some text here
</Text>
`;

exports[`2. superscript with fallback 1`] = `
<Text
  style={
    Object {
      "fontSize": 10,
    }
  }
>
  without unicode support
</Text>
`;

exports[`3. break 1`] = `
<Text>
  

</Text>
`;

exports[`3. subscript with fallback (flow) 1`] = `
StyledText {
  "children": Array [
    MarkupString {
      "text": "without unicode support",
    },
  ],
  "style": TextStyle {
    "characterCase": null,
    "fillColor": null,
    "font": null,
    "size": 10,
    "strokeColor": null,
    "strokeWidth": null,
    "tracking": null,
  },
}
`;

exports[`4. emphasis 1`] = `
<Text
  style={
    Object {
      "fontStyle": "italic",
    }
  }
>
  some emphasised text here
</Text>
`;

exports[`4. superscript with fallback (flow) 1`] = `
StyledText {
  "children": Array [
    MarkupString {
      "text": "without unicode support",
    },
  ],
  "style": TextStyle {
    "characterCase": null,
    "fillColor": null,
    "font": null,
    "size": 10,
    "strokeColor": null,
    "strokeWidth": null,
    "tracking": null,
  },
}
`;

exports[`5. image tag 1`] = `<View />`;

exports[`6. inline 1`] = `
<Text>
  some other text here
</Text>
`;

exports[`7. italic 1`] = `
<Text
  style={
    Object {
      "fontStyle": "italic",
    }
  }
>
   some more text here
</Text>
`;

exports[`8. paragraph 1`] = `
<Text>
  This is the text for paragraph one
</Text>
`;

exports[`9. strong 1`] = `
<Text
  style={
    Object {
      "fontWeight": "bold",
    }
  }
>
  some strong text here
</Text>
`;

exports[`10. subscript 1`] = `
<Text
  style={
    Object {
      "fontSize": 10,
    }
  }
>
  2
</Text>
`;

exports[`11. subscript with fallback 1`] = `
<Text
  style={
    Object {
      "fontSize": 10,
    }
  }
>
  without unicode support
</Text>
`;

exports[`12. superscript 1`] = `
<Text
  style={
    Object {
      "fontSize": 10,
    }
  }
>
  2
</Text>
`;

exports[`13. superscript with fallback 1`] = `
<Text
  style={
    Object {
      "fontSize": 10,
    }
  }
>
  without unicode support
</Text>
`;

exports[`14. does not render a script tag 1`] = `<View />`;
